tests/snapshots/test_e2e__tacky@binary_op_precedence.c.snap
---
source: tests/test_e2e.rs
expression: tacky_ast
input_file: tests/test_programs/binary_op_precedence.c
---
Program {
    function: Function {
        identifier: "main",
        instructions: [
            Binary {
                operator: Divide,
                source1: Constant(
                    4,
                ),
                source2: Constant(
                    2,
                ),
                destination: Variable(
                    "tmp.0",
                ),
            },
            Binary {
                operator: Add,
                source1: Constant(
                    2,
                ),
                source2: Constant(
                    1,
                ),
                destination: Variable(
                    "tmp.1",
                ),
            },
            Binary {
                operator: Multiply,
                source1: Constant(
                    2,
                ),
                source2: Variable(
                    "tmp.1",
                ),
                destination: Variable(
                    "tmp.2",
                ),
            },
            Binary {
                operator: Add,
                source1: Variable(
                    "tmp.0",
                ),
                source2: Variable(
                    "tmp.2",
                ),
                destination: Variable(
                    "tmp.3",
                ),
            },
            Return {
                value: Variable(
                    "tmp.3",
                ),
            },
        ],
    },
}
