tests/snapshots/test_e2e__tacky@binary_sum.c.snap
---
source: tests/test_e2e.rs
expression: tacky_ast
input_file: tests/test_programs/binary_sum.c
---
Program {
    function: Function {
        identifier: "main",
        instructions: [
            Binary {
                operator: Add,
                source1: Constant(
                    2,
                ),
                source2: Constant(
                    3,
                ),
                destination: Variable(
                    "tmp.0",
                ),
            },
            Return {
                value: Variable(
                    "tmp.0",
                ),
            },
        ],
    },
}
