tests/snapshots/test_e2e__tacky@parenthesized_expression.c.snap
---
source: tests/test_e2e.rs
expression: tacky_ast
input_file: tests/test_programs/parenthesized_expression.c
---
Tacky(
    Program {
        function: Function {
            identifier: "main",
            instructions: [
                Return {
                    value: Constant(
                        1,
                    ),
                },
            ],
        },
    },
)
