tests/snapshots/test_e2e__tacky@unary_complement.c.snap
---
source: tests/test_e2e.rs
expression: tacky_ast
input_file: tests/test_programs/unary_complement.c
---
Tacky(
    Program {
        function: Function {
            identifier: "main",
            instructions: [
                Unary {
                    operator: Complement,
                    source: Constant(
                        1,
                    ),
                    destination: Variable(
                        "tmp.0",
                    ),
                },
                Return {
                    value: Variable(
                        "tmp.0",
                    ),
                },
            ],
        },
    },
)
