tests/snapshots/test_e2e__tacky@unary_negation.c.snap
---
source: tests/test_e2e.rs
expression: tacky_ast
input_file: tests/test_programs/unary_negation.c
---
Program {
    function: Function {
        identifier: "main",
        instructions: [
            Unary {
                operator: Negate,
                source: Constant(
                    1,
                ),
                destination: Variable(
                    "tmp.0",
                ),
            },
            Return {
                value: Variable(
                    "tmp.0",
                ),
            },
        ],
    },
}
